--- a/frontend/src/app/components/cadastro/cadastro.component.html
+++ b/frontend/src/app/components/cadastro/cadastro.component.html
@@ -1,29 +1,31 @@
-<div class="d-flex flex-column justify-content-between">
-    <div class="container">
-        <p>segundo conteudo</p>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <h2 class="text-center mb-4">Cadastro de Usuário</h2>
-                <form>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="name">Nome:</label>
-                        <input type="text" class="form-control" id="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Senha:</label>
-                        <input type="password" class="form-control" id="password">
-                    </div>
-
-                </form>
-            </div>
-            <div class="col-md-3">
-                <button type="button" class="btn btn-primary btn-block mt-3">Cadastre-se</button>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <!-- Coluna da imagem -->
+        <div class="col-md-6">
+            <img src="https://via.placeholder.com/1920x1080" class="img-fluid w-100 rounded" alt="Imagem Amigável">
+        </div>
+        <!-- Coluna do formulário -->
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <h2 class="text-center mb-4">Cadastro de Usuário</h2>
+                    <form (ngSubmit)="cadastrar()">
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Nome:</label>
+                            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="nome">
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Senha:</label>
+                            <input type="password" class="form-control" id="password" name="password"
+                                [(ngModel)]="senha">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
