--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -13,15 +13,18 @@
                 <div class="card-body">
                     <form>
                         <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter email">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
                         </div>
+
                         <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <label for="password">Senha:</label>
+                            <input type="password" class="form-control" id="password" name="password"
+                                [(ngModel)]="senha">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+
                     </form>
+                    <button (click)="login()" class="btn btn-primary btn-block">Login</button>
                 </div>
             </div>
         </div>
