--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link btn btn-danger" href="#">Logout</a>
+                    <a (click)="logout()" class="nav-link btn btn-danger" href="#">Logout</a>
                 </li>
             </ul>
         </div>
