--- a/frontend/src/app/components/error-modal/error-modal.component.html
+++ b/frontend/src/app/components/error-modal/error-modal.component.html
@@ -1,1 +1,10 @@
-<p>error-modal works!</p>
+<div class="modal-header">
+    <h4 class="modal-title">Erro</h4>
+    <button type="button" class="btn-close" aria-label="Fechar" (click)="closeModal()"></button>
+</div>
+<div class="modal-body">
+    <p>{{ message }}</p> <!-- Exibir a mensagem de erro -->
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="closeModal()">Fechar</button>
+</div>
