--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,27 +1,33 @@
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h4>Login</h4>
-                </div>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
-                        </div>
+<div class="home">
+    <div class="column">
+        <img class="img-login" src="\assets\SEU GUIA.png" alt="" srcset="">
+    </div>
+    <div class="column">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4>Login</h4>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                            </div>
 
-                        <div class="form-group">
-                            <label for="password">Senha:</label>
-                            <input type="password" class="form-control" id="password" name="password"
-                                [(ngModel)]="senha">
-                        </div>
+                            <div class="form-group">
+                                <label for="password">Senha:</label>
+                                <input type="password" class="form-control" id="password" name="password"
+                                    [(ngModel)]="senha">
+                            </div>
 
-                    </form>
-                    <button (click)="login()" class="btn btn-primary btn-block">Login</button>
+                        </form>
+                        <button (click)="login()" class="btn btn-primary btn-block">Login</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
